[Frontend] Fix for collapse Inspector button
Fixes #1112
Moved min-width and overflow: hidden
to TC-specific elements; removed
overflow: hidden from .primary-pane

--- a/platform/features/conductor-v2/conductor/res/sass/_time-conductor-base.scss
+++ b/platform/features/conductor-v2/conductor/res/sass/_time-conductor-base.scss
@@ -27,9 +27,9 @@
 }
 
 .l-time-conductor-holder {
-    $minW: 500px;
     border-top: 1px solid $colorInteriorBorder;
-    min-width: $minW;
+    // Clip if Time Conductor min-width is exceeded
+    overflow: hidden;
     padding-top: $interiorMargin;
 }
 
@@ -98,6 +98,7 @@
     $r2H: nth($ueTimeConductorH, 2);
     $r3H: nth($ueTimeConductorH, 3);
 
+    min-width: 500px;
     position: relative;
 
     > .l-row-elem {
